tests/models/enum/named/f64/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1.0)]
        value: f64
    },
}
fn main() {}
