tests/models/enum/named/f64/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: f64
    },
}
fn main() {}
